--- a/app/client/templates/genome_graph/genome_graph.html
+++ b/app/client/templates/genome_graph/genome_graph.html
@@ -24,8 +24,8 @@
                         <div class="text-center small">
                             <i class="fa fa-laptop"></i> Active users in current month (December)
                         </div>
-                        <div class="flot-chart" style="height: 160px">
-                            <div class="flot-chart-content" id="flot-line-chart"></div>
+                        <div id="insertchart" style="height: 160px">
+
                         </div>
                     </div>
                     <div class="col-md-3 text-center">
