wiring up HM to CV to GV

--- a/app/client/templates/genome_graph/consensusView/consensusView.html
+++ b/app/client/templates/genome_graph/consensusView/consensusView.html
@@ -1,8 +1,14 @@
 <template name="consensusView">
 	<div class="container">
         <div class="row pt mt">
+        	<h1>Consensus View</h1>
         	<div id="main">
-        		<div id="artboard"></div>
+        		<div class="col-xs-3 pull-right">
+                                    <div class="panel-body text-center">
+                                        <a href="/gv" class="btn btn-info btn-sm">Go to Genome Context View</a>
+                                    </div>
+                                </div>
+        		<div class="col-xs-12" id="artboard"></div>
         	</div>
         </div>
     </div>
