--- a/app/client/templates/datagrid/assay_categories/assay_categories.html
+++ b/app/client/templates/datagrid/assay_categories/assay_categories.html
@@ -9,7 +9,7 @@
               <thead>
                 <tr class='danger'>
                   <th><input type="checkbox" id='chkallAssays'></th>
-                  <th>Category</th>
+                  <th>Select / Unselect All</th>
                 </tr>
               </thead>
               <tbody>
